syntax = "proto3";

option java_package = "myrmi.Info";
option java_outer_classname = "RequestInfoProto";

package myrmi.Info;
message RequestInfo {
  string method_name = 1;
  repeated bytes args = 2;
  repeated string arg_types = 3;
  int32 object_key = 4;
}